# RSS_final_project

./: .gitignore  README.md  pyproject.toml
mlruns/0/: meta.yaml
mlruns/0/0479d741dff64ba49305a465e113c323/: meta.yaml
mlruns/0/1158c5581e4543988e94f9fa9d232486/: meta.yaml
mlruns/0/1158c5581e4543988e94f9fa9d232486/metrics/: accuracy  precision_weighted  recall_weighted
mlruns/0/27da7cc3a48648e785174bd8f963d9f7/: meta.yaml
mlruns/0/27da7cc3a48648e785174bd8f963d9f7/metrics/: accuracy  precision_weighted  recall_weighted
mlruns/0/296c19378a814f93a7dc361f04393d48/: meta.yaml
mlruns/0/468aab9bd94843c2b868a8686b7e004b/: meta.yaml
mlruns/0/468aab9bd94843c2b868a8686b7e004b/metrics/: accuracy  (+2 more)
mlruns/0/5231194ae2d94963b66a49352e95b49c/: meta.yaml
mlruns/0/58746ba5ddd141779f09a93a32763605/: meta.yaml
mlruns/0/59a2f4dd7d4e4c1aa795a9f8f5d0b38e/: meta.yaml
mlruns/0/5eee347ac45542319ee2d7979b6aa180/: meta.yaml
mlruns/0/6aa8fee5b3e848539c41cedf5469aec6/: meta.yaml
mlruns/0/7620678eb9844630a90ed3d4c35278e3/: meta.yaml
mlruns/0/78a77f59e05a4e41a4839d34831507fb/: meta.yaml
mlruns/0/8aebc1de85134ee1b8412dd33d0f420d/: meta.yaml
mlruns/0/ae465a645269469482a7af4a5039b7ef/: meta.yaml
mlruns/0/d1d403bd01af4d07b5b643f5b7a3da6b/: meta.yaml
mlruns/0/df310e282c174847b7e97ef48fc43fa6/: meta.yaml
mlruns/0/df3f1ea8ab974f85a6c69425be241c50/: meta.yaml
mlruns/0/f65dad780e1b4a6f9d02d3e11ef5ebee/: meta.yaml
mlruns/0/f7ab4916400c475f8b75421c3384123f/: meta.yaml
src/capstone_project/: data.py  pipeline.py  train.py
tests/: test_capstone_project.py
(+19 files in other folders)
