[tool.poetry]
name = "capstone_project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]
train = "src.capstone_project.train:train"
eda_report = "src.capstone_project.data:get_report"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
scikit-learn = "^1.0.2"
pandas = "~1.3.5"
pandas-profiling = {url = "https://github.com/ydataai/pandas-profiling/archive/master.zip"}
click = "^8.1.3"
pathlib = "^1.0.1"
PyYAML = "^6.0"
tqdm = "^4.64.0"
visions = "^0.7.5"
pydantic = "^1.9.0"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
MarkupSafe = "^2.1.1"
Jinja2 = "^3.1.2"
ImageHash = "^4.2.1"
missingno = "^0.5.1"
phik = "^0.12.2"
htmlmin = "^0.1.12"
mlflow = "^1.25.1"
joblib = "^1.1.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
